Test HorseClass: -IllegalArgumentException -exceptionMessage -Parameterized Test -MockedStatic for methods move, getRandomDouble